--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "men-stack-crud-CarsApp",
+  "name": "men-stack-crud-cars-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
